--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+@@ -3,30 +3,80 @@ 
 /*
 Colors to use:
 dark blue: #06365f
@@ -6,5 +7,90 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  height: 100vh;
   margin: 0;
+}
+.firstsection {
+  display: flex;
+  height: 100vh;
+}
+.section {
+  padding-left: 20%;
+  padding-right: 20%;
+  margin-top: -180px;
+  display: flex;
+}
+.right-side {
+  margin-left: 10%;
+}
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(to bottom, #1c5380, #06365f);
+  border: 1px solid #0d2d44;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  text-shadow: darkgray;
+  list-style: none;
+  width: 100px;
+  height: 50px;
+  padding-right: 15px;
+}
+.button img{
+  margin: 10px;
+}
+.message {
+  background-color: white;
+  padding: 1px 30px 25px 30px;
+  border-radius: 8px;
+}
+
+h1 {
+  color: #06365f;
+}
+
+p {
+  font-size: 1.1em;
+}
+
+.badges{
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 10px;
+}
+
+.footer {
+  margin-top: 80px;
+}
+
+.footer ul {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  width: 100%;
+  justify-content: center;
+}
+
+.footer ul li{
+  margin: 0 10px;
+  color: #06365f;
+  text-transform: uppercase;
+  font-size: 11px;
+  font-weight: bold;
+}
+
+#copyright {
+  color: lightgray;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-style: normal;
+  text-decoration: none;
 }
