--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,60 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  height: 100vh;
+  padding: 5%;
+}
+
+button{
+  background: rgb(6,54,95);
+background: linear-gradient(0deg, rgba(6,54,95,1) 0%, rgba(28,83,128,1) 81%);
+border: 0;
+border-radius: 5px;
+padding: 8px;
+color: white;
+}
+
+#main{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+
+}
+
+#content{
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+}
+
+#description{
+  background-image: url(../images/frame.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 4% 7% 0%;
+}
+
+#login{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#footer{
+  display: flex;
+  justify-content: center;
+}
+
+#footer ul{
+  display: flex;
+  list-style: none;
+  justify-content: space-around;
+  width: 50vw;
+  text-transform: uppercase;
+}
+
+#footer ul a{
+  text-decoration: none;
 }
