--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,43 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 200 16px/1.5;
   margin: 0;
 }
+
+.main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.text {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-color: black;
+  height: 350px;
+}
+
+h1 {
+  
+  width: 300px;
+}
+
+p {
+  font-weight: normal;
+  font-size: 16px;
+  width: 350px;
+}
+
+
+
+
