--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,49 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  padding: 0;
+  margin: 0;  
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url('../images/bgtile.png');
+  background-repeat: repeat-x;
 }
+
+div{
+  border: 2px solid green;
+
+}
+
+section > div {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+section{
+  display: flex;
+  justify-content: center;
+  border: 2px solid red;
+}
+#divprinc {
+}
+#divsec{
+  background-image: url('../images/frame.png');
+  background-repeat: no-repeat;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+}
+
+li {
+  padding: 10px;
+}
+
