--- a/styles/style.css
+++ b/styles/style.css
@@ -18,19 +18,126 @@ section {
 
 .images-section {
   display: flex;
+  justify-content: space-around;
+  margin: 0;
+  border: 0;
+  width: 80%;
 }
 
 .phones-image {
   width: 250px;
+  padding: 50px 0;
+}
+
+.instagran-image {
+  width: 50%;
+}
+
+.home-button {
+  width: 20%;
+  color: white;
+  font-weight: bold;
+  background-color: #1c5380;
+  border: none;
+  height: 40px;
+}
+
+.home-image {
+  padding: 0 10px;
 }
 
 .frame {
   background-image: url("../images/frame.png");
   background-repeat: no-repeat;
-  background-size: cover;
-  padding: 30px;
+  background-size: 550px 900px;
+  padding: 30px 150px 30px 50px;
+}
+
+h2 {
+  color: #06365f;
+  padding-right: 130px;
 }
 
 .second-div {
   margin-left: 50px;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 80px;
+}
+
+ul {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 0 150px;
+  width: 50%;
+  text-align: center;
+}
+
+li {
+  text-transform: uppercase;
+  font-size: 10px;
+  font-weight: bold;
+  color: #06365f;
+  list-style: none;
+  margin: 0;
+  border: 0;
+}
+
+.instagran-logo {
+  color: grey
+}
+
+.app-images {
+  display: flex;
+  justify-content: center;
+}
+
+.app-store-image {
+  height: 100%;
+  width: 100%;
+}
+
+.app-store-button {
+  border: none;
+  margin-right: 30px;
+  padding: 0;
+}
+
+
+.google-play-button {
+  border: none;
+  margin-right: 200px;
+  padding: 0;
+}
+
+.google-play-image {
+  height: 100%;
+  width: 100%;
+}
+
+@media (max-width: 1100px) {
+  .phones-image {
+    display: none;
+  }
+
+  .frame {
+    background-size: 800px 900px;
+    padding: 30px 150px 30px 50px;
+  }
+}
+
+@media (max-width: 1200px) {
+  ul {
+    display: flex;
+    flex-direction: column;
+    padding-right: 250px;
+  }
+
+  li {
+    padding: 10px 0;
+    font-size: 20px;
+  }
 }
