--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,46 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 200 16px/1.5 'Helvetica Neue', Helvetica, Arial, sans-serif;
   margin: 0;
+  background: linear-gradient(#567fa1 0%, #325c82 40%, #fff 40% ) no-repeat top center;
+  min-height: 100vh;
+}
+
+section {
+  display: flex;
+  gap: 2rem;
+  min-height: 100vh;
+  min-width: 100vw;
+  place-content: center;
+  place-items: center;
+}
+
+.content {
+  max-width: 560px;
+}
+
+.container {
+  margin: 2rem 0;
+  flex-flow: column nowrap;
+  background: #fff;
+  padding: .5rem 1.5rem;
+  border-radius: .5rem;
+  -webkit-box-shadow: 0px -16px 40px 2px rgba(0,0,0,0.16);
+  -moz-box-shadow: 0px -16px 40px 2px rgba(0,0,0,0.16);
+  box-shadow: 0px -16px 40px 2px rgba(0,0,0,0.16));
+}
+
+header {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+button {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  background: linear-gradient(#567fa1 0%, #325c82 100% );
+  gap: 1rem;
+  padding: .5rem 1rem;
+  color: white;
 }
