--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,34 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url('../images/bgtile.png');
 }
+
+#main-frame {
+  margin: 30px;
+  position: relative;
+}
+
+#phones {
+  position: absolute;
+  width: 300px;
+  left: 50px;
+  top: 40px;
+}
+
+#info {
+  position: absolute;
+  width: 350px;
+  left: 400px;
+  top: 40px;
+}
+
+ul {
+  position: absolute;
+  bottom: 10px;
+}
+
+li {
+  display: inline;
+}
+
