--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,28 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+#header {
+  background-image: url("../images/bgtile.png");
+  width: 100%;
+  height: 280px;
+  margin: 0px;
+}
+
+#main-frame{
+  position: relative;
+}
+
+#iphone{
+  position: absolute;
+}
+
+#content{
+  position: absolute;
+  background-image: url("../images/frame.png");
+}
+
+#stores{
+  position: absolute;
+}
+
